[project]
name = "rvllm-serverless"
version = "0.1.0"
description = "RunPod Serverless wrapper for rvLLM"
requires-python = ">=3.11"
dependencies = [
    "runpod~=1.7.9",
    "httpx>=0.27,<1",
    "huggingface-hub>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "respx>=0.22",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
